Fixed contact profiles wrapping correctly

--- a/css/main.css
+++ b/css/main.css
@@ -191,8 +191,9 @@ nav a {
 
 .contact-staff {
     display: grid;
-    grid-template: auto / 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 240px));
     margin-bottom: 30px;
+    
 }
 
 .contact-map {
